--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <script src="Javatest.js"></script>
     <title>Student Response</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="mcq">
